--- a/src/js/components/Timeline/Timeline.css
+++ b/src/js/components/Timeline/Timeline.css
@@ -104,17 +104,17 @@
   font-size: 12px;
 }
 
-/* .timeline-item-content .circle {
-  background-color: #fff;
-  border: 3px solid #e17b77;
-  border-radius: 50%;
-  position: absolute;
-  top: calc(50% - 10px);
-  right: -40px;
-  width: 20px;
-  height: 20px;
-  z-index: 100;
-} */
+.tech, .tech-education {
+  background-color: var(--cool-blue);
+}
+
+.education {
+  background-color: var(--teal);
+}
+
+.work-automotive {
+  background-color: var(--hot-pink);
+}
 
 .timeline-item:nth-child(odd) .timeline-item-content .circle {
   right: auto;
